; ModuleID = '/home/carl/AnghaBench/freebsd/sys/powerpc/ofw/extr_rtas.c_rtas_real_unmap.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/powerpc/ofw/extr_rtas.c_rtas_real_unmap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@rtas_mtx = common dso_local global i32 0, align 4
@MA_OWNED = common dso_local global i32 0, align 4
@rtas_bounce_virt = common dso_local global i64 0, align 8
@rtas_bounce_phys = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64, i8*, i64)* @rtas_real_unmap to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rtas_real_unmap(i64 %0, i8* %1, i64 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  store i64 %0, i64* %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load i32, i32* @MA_OWNED, align 4
  %8 = call i32 @mtx_assert(i32* @rtas_mtx, i32 %7)
  %9 = load i64, i64* %4, align 8
  %10 = icmp eq i64 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %3
  br label %21

12:                                               ; preds = %3
  %13 = load i8*, i8** %5, align 8
  %14 = load i64, i64* @rtas_bounce_virt, align 8
  %15 = load i64, i64* %4, align 8
  %16 = load i64, i64* @rtas_bounce_phys, align 8
  %17 = sub nsw i64 %15, %16
  %18 = add nsw i64 %14, %17
  %19 = load i64, i64* %6, align 8
  %20 = call i32 @memcpy(i8* %13, i64 %18, i64 %19)
  br label %21

21:                                               ; preds = %12, %11
  ret void
}

declare dso_local i32 @mtx_assert(i32*, i32) #1

declare dso_local i32 @memcpy(i8*, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
